<resources>
    <string name="app_name">City Watch</string>

    <string name="action_account">Account</string>
    <string name="action_next">Next</string>
    <string name="action_previous">Prev</string>
    <string name="action_logout">Logout</string>

    <string name="fragment_login_card_title_text">Sign in</string>
    <string name="fragment_login_enter_email_text">Enter Email</string>
    <string name="fragment_login_enter_password_text">Enter Password</string>
    <string name="fragment_login_button_text">LOGIN</string>

    <string name="fragment_create_account_card_title_text">Create a new account</string>
    <string name="fragment_create_account_display_name_text">Display Name</string>
    <string name="fragment_create_account_enter_email_text">Enter Email</string>
    <string name="fragment_create_account_enter_password_text">Enter Password</string>
    <string name="fragment_create_account_button_text">CREATE A NEW ACCOUNT</string>

    <string name="activity_main_already_have_account_button_text">ALREADY HAVE ACCOUNT</string>
    <string name="activity_main_create_new_account_button_text">CREATE A NEW ACCOUNT</string>
    <string name="activity_main_title_text">CityWatch</string>
    <string name="activity_main_image">Image</string>

    <string name="fragment_account_display_name_text">Display Name</string>
    <string name="fragment_account_likes_text">Likes: %1$s</string>
    <string name="fragment_account_change_picture_text">CHANGE PICTURE</string>
    <string name="fragment_account_change_display_name_text">CHANGE DISPLAY NAME</string>
    <string name="fragment_account_logout_text">LOGOUT</string>

    <string name="fragment_change_display_name_enter_your_new_display_name_text">Display Name</string>
    <string name="fragment_change_display_name_edit_display_name_edit_text">Enter your new Display Name</string>
    <string name="fragment_change_display_name_update_display_name_button">SAVE NEW DISPLAY NAME</string>

    <string name="fragment_create_report_card_title_text">Create Report</string>
    <string name="fragment_create_report_enter_title_text">Enter Title</string>
    <string name="fragment_create_report_enter_description_text">Enter Description</string>
    <string name="fragment_create_report_button_text">Create Report</string>
    <string name="fragment_create_report_severity_text_view_text">Select severity</string>

    <string name="title_reports">Reports</string>
    <string name="title_detail_report">Report</string>
    <string name="title_create_report">Create Report</string>
    <string name="title_see_all_posts">Map</string>
    <string name="title_account">My Account</string>
    <string name="title_display_name">Display Name</string>
    <string name="report_image">Report image</string>
    <string name="fragment_report_detail_description_text_view">Description</string>
    <string name="fragment_report_detail_title_text_view">Title</string>
    <string name="report_image_content_description">Report image</string>
    <string name="item_report_severity_text_view">Severity</string>
    <string name="item_report_title_text_view">Title</string>
    <string name="fragment_report_detail_made_by_account_name_text_view">Made by</string>
    <string name="fragment_report_detail_severity_text_view">Severity</string>

    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="fragment_report_detail_total_likes_text_view">total likes.</string>
    <string name="settings_menu_item_title">settings</string>

    <string name="title_settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="toolbarColorPickerPreference">toolbarColorPickerPreference</string>
    <string name="navBarBackgroundColorPickerPreference">navBarBackgroundColorPickerPreference</string>
    <string name="googleMapsType">googleMapsType</string>
    <string name="clearPreferences">clearPreferences</string>
</resources>
