<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".account_activities.MainActivity"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="320dp"
        android:layout_height="155dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login_image"
        android:contentDescription="@string/activity_main_image" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="251dp"
        android:layout_height="58dp"
        android:layout_marginTop="44dp"
        android:text="@string/activity_main_title_text"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="32sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="194dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:background="@color/colorAccent"
        android:text="@string/activity_main_already_have_account_button_text"
        android:textColor="@color/grey_100"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="197dp"
        android:layout_height="46dp"
        android:layout_marginTop="32dp"
        android:background="@color/colorAccent"
        android:text="@string/activity_main_create_new_account_button_text"
        android:textColor="@color/grey_100"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

</androidx.constraintlayout.widget.ConstraintLayout>